--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 
-
-
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  app-root {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
