--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-
-<app-navbar >
-</app-navbar>
-<router-outlet>
-    
-</router-outlet>
+<app-navbar *ngIf="router.url === '/'"> </app-navbar>
+<app-second-navbar *ngIf="router.url !== '/'"></app-second-navbar>
+<router-outlet> </router-outlet>
