--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,32 +11,41 @@
         </a>
       </div>
       <div class="col-6 text-white">
-        <form action="" class="container">
-          <div class="row form-height">
-            <div
-              class="col-8 border border-1 border-white border-opacity-50 rounded-1 rounded-end-0"
-            >
-              <input
-                type="search"
-                name="search"
-                class="form-control w-100 rounded-0 border-0 bg-dark text-white"
-                placeholder="czego szukasz?"
-                aria-label="Search"
-              />
-            </div>
-            <div
-              class="col-2 border border-1 border-white border-opacity-50 border-start-0 rounded-1 rounded-start-0"
-            >
-              b
-            </div>
-            <div class="col-2"></div>
+        <form action="" class="d-flex">
+          <div
+            class="border border-1 border-white border-opacity-50 rounded-1 rounded-end-0 bg-dark"
+          >
+            <input
+              type="text"
+              name="search"
+              class="form-control w-100 rounded-0 border-0 bg-dark text-white"
+              placeholder="czego szukasz?"
+              aria-label="Search"
+            />
           </div>
+          <div>
+            <a href="" class="">szukaj wielu</a>
+          </div>
+          <button class="custom-button">Szukaj</button>
+          <div class=""></div>
         </form>
       </div>
+      <div class="col-3 d-flex gap-3">
+        <div class="text-white">
+          <i class="bi bi-truck"></i>
+        </div>
+        <div class="text-white">
+          <i class="bi bi-heart"></i>
+        </div>
+        <div class="text-white">
+          <i class="bi bi-chat-left-dots"></i>
+        </div>
+        <div class="text-white">
+          <i class="bi bi-bag"></i>
+        </div>
+      </div>
     </div>
-    <div class="col-5"></div>
-    <div class="row">
-      <div class="col-12 text-bg-danger"><a>cipka</a></div>
-    </div>
+
+    <div class="row"></div>
   </div>
 </nav>
