--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,67 @@
-<p>register works!</p>
+<div class="register-container">
+  <h2>Register</h2>
+  <form (submit)="register()">
+    <div>
+      <label for="firstname">First Name:</label>
+      <input
+        type="text"
+        id="firstname"
+        [(ngModel)]="firstname"
+        name="firstname"
+        required
+      />
+    </div>
+    <div>
+      <label for="lastName">Last Name:</label>
+      <input
+        type="text"
+        id="lastName"
+        [(ngModel)]="lastName"
+        name="lastName"
+        required
+      />
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        [(ngModel)]="email"
+        name="email"
+        required
+      />
+    </div>
+    <div>
+      <label for="dateOfBirth">Date of Birth:</label>
+      <input
+        type="date"
+        id="dateOfBirth"
+        [(ngModel)]="dateOfBirth"
+        name="dateOfBirth"
+        required
+      />
+    </div>
+    <div>
+      <label for="gender">Gender:</label>
+      <select id="gender" [(ngModel)]="gender" name="gender" required>
+        <option value="">Select</option>
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+      </select>
+    </div>
+    <div>
+      <label for="phoneNumber">Phone Number:</label>
+      <input
+        type="text"
+        id="phoneNumber"
+        [(ngModel)]="phoneNumber"
+        name="phoneNumber"
+        required
+      />
+    </div>
+    <label for="password">Password</label>
+    <input type="password" id="password" required name="password" [(ngModel)]="password">
+    <button type="submit">Register</button>
+    <div></div>
+  </form>
+</div>
