--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,6 @@ html, body {
     flex-direction: column;
     height: 100%;
   }
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
