--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg h-100">
-  <div class="container h-100 d-block">
-    <div class="row py-2">
-      <div class="col-3">
-        <a class="navbar-brand" href="#">
+<nav class="">
+  <div class="flex-row">
+    <div class="flex">
+      <div class="">
+        <a class="" href="#">
           <img
             src="assets/images/Ecommerce_logo.png"
             alt="Allegro"
@@ -10,15 +10,15 @@
           />
         </a>
       </div>
-      <div class="col-6 text-white">
-        <form action="" class="d-flex">
+      <div class="">
+        <form action="" class="flex">
           <div
-            class="border border-1 border-white border-opacity-50 rounded-1 rounded-end-0 bg-dark"
+            class=""
           >
             <input
               type="text"
               name="search"
-              class="form-control w-100 rounded-0 border-0 bg-dark text-white"
+              class="custom-input"
               placeholder="czego szukasz?"
               aria-label="Search"
             />
@@ -26,26 +26,14 @@
           <div>
             <a href="" class="">szukaj wielu</a>
           </div>
-          <button class="custom-button">Szukaj</button>
+          <button class="bg-orange-600 ">Szukaj</button>
           <div class=""></div>
         </form>
       </div>
-      <div class="col-3 d-flex gap-3">
-        <div class="text-white">
-          <i class="bi bi-truck"></i>
-        </div>
-        <div class="text-white">
-          <i class="bi bi-heart"></i>
-        </div>
-        <div class="text-white">
-          <i class="bi bi-chat-left-dots"></i>
-        </div>
-        <div class="text-white">
-          <i class="bi bi-bag"></i>
-        </div>
-      </div>
     </div>
+      </div>
+    
 
-    <div class="row"></div>
-  </div>
+    <div class=""></div>
+  
 </nav>
