--- a/src/app/components/second-navbar/second-navbar.component.html
+++ b/src/app/components/second-navbar/second-navbar.component.html
@@ -1,3 +1,15 @@
-<nav class="navbar navbar-expand-lg h-100">
-  <img src="assets/images/Ecommerce_logo.png" alt="Allegro" height="100%" />
-</nav>
+
+    <nav class="lg:px-48 bg-background_gray">
+      <div class="flex justify-between items-center  py-4">
+        <a class="" href="#">
+          <img
+            src="assets/images/Ecommerce_logo.png"
+            alt="Allegro"
+            height="100%"
+          />
+        </a>
+        <div class="text-teal-400 text-sm">
+            CHANGE LANGUAGE
+        </div>
+      </div>
+    </nav>
